# userland

./: .gitignore  README.md  copyglsl.sh  raspibgs.cfg
glsl/: bgs_fragshader_diff.glsl  bgs_fragshader_dilate.glsl  bgs_fragshader_erode.glsl  bgs_fragshader_fill.glsl  externalfragshader.glsl  externalfragshader_bgsfill.glsl  greyscale_fragshader.glsl  simplevertshader2.glsl
host_applications/linux/apps/raspicam/: CMakeLists.txt  Makefile  MemoryIniFile.c  MemoryIniFile.h  RaspiBGS.c  RaspiTex.c  RaspiTex.h  RaspiTexUtil.c  RaspiTexUtil.h  RaspiVid.c  Tools.c  Tools.h  graphics.cpp  graphics.h  tga.c  tga.h
host_applications/linux/apps/raspicam/gl_scenes/: bgs_simple.cpp  simple.cpp  simple.h
